@@ -1,6 +1,6 @@
 2016-06-30  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
-	* tests/*.tex: udpate version number.
+	* tests/*.tex: update version number.
 
 2016-05-06  Ken Brown  <kbrow1i@gmail.com>
 
